Fix cart dropdown alignment

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ nav .cart-state svg {
 }
 .cart-dropdown {
   border: 4px solid #e4e4e4;
-  top: 74px;
+  top: 76px;
   right: -1px;
   padding: 20px;
   z-index: 3;
